# warszawskiespoldzielnie

./: .gitignore  README.md  app.py  dat.db  devserver.py  gsheet.py  manage.py  pyproject.toml
db/: dat.db
pkgs/gsheet/: README.md  auth.py  create_spreadsheet.py  read_range.py  refresh_artykuly.py  refresh_spoldzielnie.py  refresh_walne.py
pkgs/spoldzielnie/: README.md  pyproject.toml
pkgs/spoldzielnie/spoldzielnie/: __init__.py  config.py
pkgs/spoldzielnie/spoldzielnie/dane/: .~lock.spoldzielnie.ods#  .~lock.sprawy.ods#  radni.ods  rejestr_check1.txt  spoldzielnie.ods  spoldzielnie_2.ods  spoldzielnie_3.ods  spoldzielnie_df_1.csv  spoldzielnie_df_2.csv  spoldzielnie_df_3.csv  spoldzielnie_df_4.csv  spoldzielnie_dzielnice.csv  spoldzielnie_krs.txt  spoldzielnie_krs_dane copy.csv  spoldzielnie_krs_dane2 copy.csv  spoldzielnie_krs_dane3.csv  sprawy.ods  walne.ods
pkgs/spoldzielnie/spoldzielnie/migrations/versions/: e852efa2a2d8_data_dodania.py  f0cb75459ac6_init.py  f3ecd14aed35_dodanie_spraw.py
pkgs/spoldzielnie/spoldzielnie/models/: __init__.py
pkgs/spoldzielnie/spoldzielnie/routes/: common.py
pkgs/spoldzielnie/spoldzielnie/static/: artykuly_ogolne.txt  charts.js  czujnik.txt  warszawskie_spoldzielnie.csv
pkgs/spoldzielnie/spoldzielnie/static/dzielnice/: spol.geojson  test2.geojson  (+3 more)
pkgs/spoldzielnie/spoldzielnie/templates/: artykuly.html  base.html  index.html  spoldzielnia.html
pkgs/spoldzielnie/src/spoldzielnie/: __init__.py  config.py
pkgs/utils/: get_dane.py
utils/: get_dane.py  get_dzielnice.py  get_odpis_zupelny.py  szukajkrs.py  zapis.py
(+39 files in other folders)
