[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["szalaj <mszalajski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.9"
flask = "^3.0.2"
loguru = "^0.7.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
spoldzielnie = {path = "pkgs/spoldzielnie", develop = true}
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
